tests/invalid/Lambda_Invalid_5.whiley
type voidretmethod is method(int)->(void)